# water-tank

./: .gitignore  .nojekyll  LICENSE.txt  License.html  README.md  index.html  pyproject.toml  robots.txt  search.json  setup.py  sitemap.xml
docs/: .gitignore  License.qmd  README.md  _quarto.yml  _sidebar.yml  index.qmd  objects.json
docs/assets/: webpage.scss
docs/notebooks/: FORCE.ipynb  MackeyGlass.ipynb  Miconi-DNMS.ipynb  Readout-Perturbation.ipynb  index.qmd
docs/reference/: Bernouilli.qmd  Const.qmd  DeltaLearningRule.qmd  DenseProjection.qmd  LinearReadout.qmd  MiconiLayer.qmd  Normal.qmd  RLS.qmd  RandomDistributions.Bernouilli.qmd  RandomDistributions.Const.qmd  RandomDistributions.Normal.qmd  RandomDistributions.Uniform.qmd  Recorder.Recorder.qmd  Recorder.qmd  RecurrentLayer.qmd  Reservoir.qmd  SparseProjection.qmd  StaticInput.qmd  TimeSeriesInput.qmd  Uniform.qmd  connect.qmd  index.qmd  index.qmd.qmd
examples/: MackeyGlass-ReservoirPy.py  MackeyGlass.py
notebooks/: FORCE.html  MackeyGlass.html  Miconi-DNMS.html  Readout-Perturbation.html  index.html
reference/: Bernouilli.html  Const.html  DeltaLearningRule.html  DenseProjection.html  LinearReadout.html  Normal.html  RLS.html  RandomDistributions.Bernouilli.html  RandomDistributions.Const.html  RandomDistributions.Normal.html  RandomDistributions.Uniform.html  Recorder.Recorder.html  Recorder.html  RecurrentLayer.html  Reservoir.html  SparseProjection.html  StaticInput.html  TimeSeriesInput.html  Uniform.html  connect.html  index.html  index.qmd.html
site_libs/bootstrap/: bootstrap.min.css
src/water_tank/: Inputs.py  Layers.py  LearningRules.py  Projections.py  RandomDistributions.py  Readouts.py  Recorder.py  Recorders.py  Reservoirs.py  Utils.py  __init__.py
src/water_tank.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/water_tank/layers/: Layer.py  LinearReadout.py  MiconiLayer.py  RecurrentLayer.py  StaticInput.py  TimeSeriesInput.py  __init__.py
src/water_tank/projections/: DenseProjection.py  Projection.py  SparseProjection.py  __init__.py
src/water_tank/projections/sparse/: LIL.hpp  Sparse.pyx  __init__.py
src/water_tank/random/: RandomDistributions.py  __init__.py
src/water_tank/rules/: DeltaLearningRule.py  MiconiLearningRule.py  RLS.py  __init__.py
tests/: __init__.py
