[build-system]
requires = ["setuptools", "setuptools-scm", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "water-tank"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = []
authors = [
  { name = "Julien Vitay", email = "julien.vitay@informatik.tu-chemnitz.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    'numpy >= 1.21',
    'scipy >= 1.11',
]

[project.urls]
Documentation = "https://github.com/vitay/water-tank#readme"
Issues = "https://github.com/vitay/water-tank/issues"
Source = "https://github.com/vitay/water-tank"

