[build-system]
requires = ["setuptools", "setuptools-scm", "wheel", "numpy", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "water-tank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {text = "MIT"}
authors = [
  { name = "Julien Vitay", email = "julien.vitay@informatik.tu-chemnitz.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.12"
dependencies = [
    "cython>=3.0.11",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "quartodoc>=0.8.1",
    "reservoirpy>=0.3.11",
    "scipy>=1.14.1",
]


[project.urls]
Documentation = "https://github.com/vitay/water-tank#readme"
Issues = "https://github.com/vitay/water-tank/issues"
Source = "https://github.com/vitay/water-tank"
